# grasped_object_in_robot_control

./: CMakeLists.txt  package.xml
include/grasped_object_in_robot_control/: mass_dynamic_control.h  mass_static_control.h
