<package>
  <name>grasped_object_in_robot_control</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="szymonj955@wp.pl">Szymon Jarocki</maintainer>
  <description>
    grasped_object_in_robot_control
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>kin_dyn_model</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>kin_dyn_model</run_depend>

</package>
